add ingredient retrieval
